[update]fix a little cramped

--- a/frontend/src/components/Header.module.css
+++ b/frontend/src/components/Header.module.css
@@ -1,4 +1,4 @@
-@import "../styles/variables.css";
+@import '../styles/variables.css';
 
 .header {
   @apply w-full;
@@ -31,7 +31,7 @@
 .mobile-menu-btn {
   @apply mr-4;
   @apply flex items-center justify-center;
-  @apply w-8 h-8;
+  @apply w-10 h-10;
 }
 
 .menu-icon {
